--- a/frontend/web/css/main.css
+++ b/frontend/web/css/main.css
@@ -1,4 +1,7 @@
 /* pnpNT CSS file */
+body {
+    font-family: Roboto-Regular;
+}
 .badge-primary {
     background-color: rgba(51, 122, 183, 1);
 }
