--- a/frontend/web/css/element-style.css
+++ b/frontend/web/css/element-style.css
@@ -1,7 +1,7 @@
 .main-container-element {
     border: 1px solid #cccccc;
     border-radius: 3px;
-    box-shadow: 0.2em 0.2em 3px rgba(122,122,122,0.5);
+    box-shadow: 0 0.2em 3px rgba(122,122,122,0.5);
 }
 .main-container-header-element {
     padding: 0;
