--- a/frontend/web/css/element-style.css
+++ b/frontend/web/css/element-style.css
@@ -1,7 +1,7 @@
 .main-container-element {
     border: 1px solid #cccccc;
     border-radius: 3px;
-    box-shadow: 0 0.2em 3px rgba(122,122,122,0.5);
+    box-shadow: 0.2em 0.2em 3px rgba(122,122,122,0.5);
 }
 .main-container-header-element {
     padding: 0;
@@ -20,13 +20,16 @@
     text-decoration: underline;
 }
 .icon-favorite {
-    font-size: 24px;
-    color: #cccccc;
+    font-size: 18px;
+    color: #ddaa00;
+    cursor: pointer;
+!important; float: right;
+}
+.icon-favorite-empty {
+    font-size: 18px;
+    color: #9d9d9d;
     cursor: pointer;
     !important; float: right;
-}
-.icon-favorite:hover {
-    color: #ddaa00;
 }
 .content-elem {
     margin: 0 0 5px 0 !important;
