Add real estate tables b45

--- a/frontend/web/css/element-style.css
+++ b/frontend/web/css/element-style.css
@@ -19,6 +19,36 @@
 .main-container-header-element-template:hover {
     text-decoration: underline;
 }
+.icon-pencil {
+    font-size: 18px;
+    color: #9d9d9d;
+    cursor: pointer;
+    float: right;
+}
+.icon-pencil:hover {
+    font-size: 18px;
+    color: #1c309d;
+    cursor: pointer;
+    float: right;
+}
+.icon-trash {
+    font-size: 18px;
+    color: #9d9d9d;
+    cursor: pointer;
+    float: right;
+}
+.icon-trash:hover {
+    font-size: 18px;
+    color: #9d0d0e;
+    cursor: pointer;
+    float: right;
+}
+.icon-span {
+    font-size: 18px;
+    color: #ddaa00;
+    cursor: pointer;
+    float: right;
+}
 .icon-favorite {
     font-size: 18px;
     color: #ddaa00;
