--- a/frontend/web/css/main.css
+++ b/frontend/web/css/main.css
@@ -22,8 +22,8 @@ body {
 #main-menu.navbar-default {
     font-size: 14px;
     background-color: rgba(51, 122, 183, 1);
-    border-width: 0px;
-    border-radius: 0px;
+    border-width: 0;
+    border-radius: 0;
 }
 #main-menu.navbar-default .navbar-nav>li>a {
     color: rgba(255, 255, 255, 1);
@@ -60,4 +60,7 @@ body {
 .carousel-indicators {
     margin-top: 10% !important;
 }
-
+#map-canvas {
+    width: 100%;
+    height: 300px;
+}
