Edit main motor 3

--- a/frontend/web/css/main.css
+++ b/frontend/web/css/main.css
@@ -1,6 +1,6 @@
 /* pnpNT CSS file */
 body {
-    font-family: 'Roboto';
+    font-family: 'RobotoRegular';
 }
 .badge-primary {
     background-color: rgba(51, 122, 183, 1);
