--- a/frontend/web/css/element-style.css
+++ b/frontend/web/css/element-style.css
@@ -2,6 +2,7 @@
     border: 1px solid #cccccc;
     border-radius: 3px;
     box-shadow: 0.2em 0.2em 3px rgba(122,122,122,0.5);
+    padding-top: 5px !important;
 }
 .main-container-header-element {
     padding: 0;
@@ -33,6 +34,7 @@
     color: #9d9d9d;
     cursor: pointer;
     float: right;
+    padding-left: 2px;
 }
 .icon-trash:hover {
     color: #9d0d0e;
@@ -43,17 +45,46 @@
     cursor: pointer;
     float: right;
 }
-.icon-favorite {
-    font-size: 18px;
+.icon-exclamation-sign {
+    font-size: 16px;
     color: #ddaa00;
     cursor: pointer !important;
     float: right;
 }
+.icon-favorite {
+    font-size: 16px;
+    color: #429942;
+    cursor: pointer !important;
+    float: right;
+    padding-left: 2px;
+}
 .icon-favorite-empty {
-    font-size: 18px;
+    font-size: 16px;
     color: #9d9d9d;
-    cursor: pointer;
-    !important; float: right;
+    cursor: pointer !important;
+    float: right;
+    padding-left: 2px;
+}
+.icon-favorite-empty:hover {
+    color: #429942;
+}
+.icon-exclamation-sign {
+    font-size: 16px;
+    color: #d34641;
+    cursor: pointer !important;
+    float: right;
+}
+.icon-exclamation-sign:hover {
+    color: #d34641;
+}
+.icon-exclamation-sign-empty {
+    font-size: 16px;
+    color: #9d9d9d;
+    cursor: pointer !important;
+    float: right;
+}
+.icon-exclamation-sign-empty:hover {
+    color: #ce0d0e;
 }
 .content-elem {
     margin: 0 0 5px 0 !important;
@@ -73,7 +104,6 @@
     float: left;
     margin-right: 10px;
 }
-.radio-input {
+.fa-spinner {
 
 }
-
